# OpenCADStudio

./: COMMANDS.md  Cargo.toml  INTEGRATION_GAPS.md  PERFORMANCE.md  README.md  ROADMAP.md  build.rs  index.html
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
crates/ocs_example_plugin/: Cargo.toml  README.md  plugin.toml
crates/ocs_example_plugin/src/: lib.rs
crates/ocs_plugin_api/src/: host.rs  lib.rs  process.rs  ribbon.rs  runner.rs
crates/ocs_plugin_api/src/process/: manager.rs
crates/ocs_plugin_api/src/ribbon/: owned.rs
crates/plugin-template-api2/src/: lib.rs
docs/: plugin-architecture.md
docs/plugin-template-v2/src/: lib.rs
examples/: inspect_block.rs  inspect_lt.rs
packaging/: io.github.HakanSeven12.OpenCadStudio.metainfo.xml
packaging/windows/: main.wxs  ui.wxs
plugins/: registry.json
src/: command.rs  lib.rs  main.rs  patreon.rs  snap.rs  sys.rs
src/app/: automation.rs  cmd_result.rs  command_driver.rs  commands.rs  document.rs  helpers.rs  mod.rs  plugin_host.rs  properties.rs  settings.rs  update.rs  view.rs
src/app/commands/: dim.rs  display.rs  layers.rs  mod.rs  styleprops.rs
src/app/update/: command.rs  file.rs  mod.rs  viewport.rs
src/app/view/: mod.rs
src/command/: mod.rs
src/entities/: arc.rs  circle.rs  common.rs  dimension.rs  ellipse.rs  hatch.rs  insert.rs  lwpolyline.rs  mesh.rs  multileader.rs  polyline.rs  table.rs  text_support.rs  viewport.rs
src/io/: file_association.rs  mod.rs
src/modules/annotate/: mod.rs
src/modules/draw/: mod.rs  select.rs
src/modules/draw/draw/: line.rs
src/modules/draw/inquiry/: dist.rs
src/modules/draw/modify/: explode.rs
src/modules/home/draw/: arc.rs  hatch.rs
src/modules/home/modify/: rotate.rs
src/modules/insert/: mod.rs
src/modules/layout/: mod.rs
src/modules/manage/: about.rs  mod.rs
src/modules/model/: mod.rs
src/modules/storm_sewer/: INTEGRATION.md  structures.rs
src/modules/view/: mod.rs  plot_window.rs  quick_print.rs  ucs_cmd.rs
src/plugin/: external.rs  host.rs  mod.rs  registry.rs
src/scene/: block_cache.rs  camera_ops.rs  entity.rs  hatch_model.rs  hit_test.rs  image_model.rs  mod.rs  paper_canvas.rs  render.rs  selection.rs  tessellate.rs
src/scene/cache/: block_cache.rs  properties.rs
src/scene/convert/: solid3d_tess.rs  tess.rs  tessellate.rs  truck_tess.rs
src/scene/model/: object.rs  solid_model.rs
src/scene/pick/: grip.rs  hit_test.rs  mod.rs  selection_state.rs
src/scene/pipeline/: face3d_gpu.rs  hatch_batched_gpu.rs  hatch_gpu.rs  image_gpu.rs  mod.rs  uniforms.rs  wire_gpu.rs
src/scene/text/: mod.rs  sysfont.rs  ttf_glyph.rs  web_font.rs
src/scene/view/: camera.rs  dispatch.rs  render.rs
src/shaders/: face3d.wgsl  hatch.wgsl  hatch_batched.wgsl  image.wgsl  mesh.wgsl  wire.wgsl
src/snap/: mod.rs
src/ui/: command_line.rs  dimstyle.rs  mod.rs  overlay.rs  plugin_manager.rs  properties.rs  scale_popup.rs  selection_filter_popup.rs  statusbar.rs  statusbar_config.rs
src/ui/popup/: isolate_popup.rs  mod.rs  scale_popup.rs  selection_filter_popup.rs  snap_popup.rs  units_popup.rs
src/ui/ribbon/: mod.rs  widgets.rs
src/ui/statusbar/: mod.rs  statusbar_menu.rs
tests/: text_font_rendering.rs  zoom_extents_xline.rs
web/fonts/: OFL.txt  generate.sh
